--- a/Catalog/CallbacksController.xib
+++ b/Catalog/CallbacksController.xib
@@ -1,58 +1,68 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CallbacksController">
             <connections>
-                <outlet property="view" destination="6c4-MN-6TZ" id="yQX-nP-gvm"/>
+                <outlet property="view" destination="1" id="Il9-9I-AqV"/>
                 <outlet property="webView" destination="4" id="12"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6c4-MN-6TZ">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+        <view contentMode="scaleToFill" id="1">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <view key="tableHeaderView" contentMode="scaleToFill" id="1">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                <subviews>
-                    <webView contentMode="scaleToFill" id="4">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="517"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <dataDetectorType key="dataDetectorTypes"/>
-                        <connections>
-                            <outlet property="delegate" destination="-1" id="11"/>
-                        </connections>
-                    </webView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="21">
-                        <rect key="frame" x="13" y="524" width="108" height="44"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <state key="normal" title="Do some maths">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="DoSomeMaths:" destination="-1" eventType="touchUpInside" id="gCh-BN-X1D"/>
-                        </connections>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="22">
-                        <rect key="frame" x="190" y="524" width="130" height="44"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
-                        <state key="normal" title="Test Auto">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="AutoTest:" destination="-1" eventType="touchUpInside" id="0jM-Tg-c7h"/>
-                        </connections>
-                    </button>
-                </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            </view>
-        </tableView>
+            <subviews>
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <dataDetectorType key="dataDetectorTypes"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="11"/>
+                    </connections>
+                </webView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21">
+                    <rect key="frame" x="0.0" y="556" width="300" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="4eI-Kg-hx5"/>
+                    </constraints>
+                    <state key="normal" title="Do some maths">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="DoSomeMaths:" destination="-1" eventType="touchUpInside" id="gCh-BN-X1D"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22">
+                    <rect key="frame" x="300" y="556" width="300" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="z7a-as-Vaq"/>
+                    </constraints>
+                    <state key="normal" title="Test Auto">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="AutoTest:" destination="-1" eventType="touchUpInside" id="0jM-Tg-c7h"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="4" firstAttribute="top" secondItem="1" secondAttribute="top" id="7b0-RT-84L"/>
+                <constraint firstItem="21" firstAttribute="width" secondItem="1" secondAttribute="width" multiplier="0.5" id="Ats-xE-ECV"/>
+                <constraint firstItem="4" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Hiy-uX-5hJ"/>
+                <constraint firstItem="4" firstAttribute="width" secondItem="1" secondAttribute="width" id="IcV-Fy-bbZ"/>
+                <constraint firstItem="22" firstAttribute="width" secondItem="1" secondAttribute="width" multiplier="0.5" id="KFu-8f-752"/>
+                <constraint firstAttribute="trailing" secondItem="22" secondAttribute="trailing" id="LZY-Vu-gbp"/>
+                <constraint firstAttribute="bottom" secondItem="21" secondAttribute="bottom" id="U7T-Yb-4zC"/>
+                <constraint firstAttribute="bottom" secondItem="22" secondAttribute="bottom" id="bkY-8S-yrU"/>
+                <constraint firstItem="22" firstAttribute="top" secondItem="4" secondAttribute="bottom" id="gaf-WL-OUo"/>
+                <constraint firstItem="21" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="w5G-Bl-DJT"/>
+            </constraints>
+        </view>
     </objects>
 </document>
