--- a/Catalog/EventsController.xib
+++ b/Catalog/EventsController.xib
@@ -1,58 +1,68 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EventsController">
             <connections>
-                <outlet property="view" destination="wAb-rj-tvt" id="IvJ-zM-64U"/>
+                <outlet property="view" destination="oQw-M9-06M" id="Y83-GM-JSA"/>
                 <outlet property="webView" destination="pgx-Cc-xEM" id="HT7-2a-Fau"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wAb-rj-tvt">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+        <view contentMode="scaleToFill" id="oQw-M9-06M">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-            <view key="tableHeaderView" contentMode="scaleToFill" id="oQw-M9-06M">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                <subviews>
-                    <webView contentMode="scaleToFill" id="pgx-Cc-xEM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="517"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <dataDetectorType key="dataDetectorTypes"/>
-                        <connections>
-                            <outlet property="delegate" destination="-1" id="PVm-xQ-IfF"/>
-                        </connections>
-                    </webView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="VHK-9c-Oz0">
-                        <rect key="frame" x="13" y="524" width="108" height="44"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <state key="normal" title="--">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="onZoomOutButton:" destination="-1" eventType="touchUpInside" id="QWC-Z1-pvg"/>
-                        </connections>
-                    </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="tlL-Rj-xmA">
-                        <rect key="frame" x="190" y="524" width="130" height="44"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
-                        <state key="normal" title="++">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="onZoomInButton:" destination="-1" eventType="touchUpInside" id="35W-3Y-bbw"/>
-                        </connections>
-                    </button>
-                </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            </view>
-        </tableView>
+            <subviews>
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pgx-Cc-xEM">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <dataDetectorType key="dataDetectorTypes"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="PVm-xQ-IfF"/>
+                    </connections>
+                </webView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VHK-9c-Oz0">
+                    <rect key="frame" x="0.0" y="556" width="300" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="mKL-l1-mZl"/>
+                    </constraints>
+                    <state key="normal" title="--">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="onZoomOutButton:" destination="-1" eventType="touchUpInside" id="QWC-Z1-pvg"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tlL-Rj-xmA">
+                    <rect key="frame" x="300" y="556" width="300" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="ePl-i8-MuD"/>
+                    </constraints>
+                    <state key="normal" title="++">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="onZoomInButton:" destination="-1" eventType="touchUpInside" id="35W-3Y-bbw"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="tlL-Rj-xmA" secondAttribute="trailing" id="6cu-3u-eHG"/>
+                <constraint firstItem="tlL-Rj-xmA" firstAttribute="width" secondItem="oQw-M9-06M" secondAttribute="width" multiplier="0.5" id="GIq-Xo-1NP"/>
+                <constraint firstAttribute="bottom" secondItem="VHK-9c-Oz0" secondAttribute="bottom" id="P8w-Zu-lqk"/>
+                <constraint firstItem="pgx-Cc-xEM" firstAttribute="leading" secondItem="oQw-M9-06M" secondAttribute="leading" id="T0z-9o-59T"/>
+                <constraint firstAttribute="bottom" secondItem="tlL-Rj-xmA" secondAttribute="bottom" id="cqP-0m-b1o"/>
+                <constraint firstItem="tlL-Rj-xmA" firstAttribute="top" secondItem="pgx-Cc-xEM" secondAttribute="bottom" id="iDt-gR-zeX"/>
+                <constraint firstItem="pgx-Cc-xEM" firstAttribute="top" secondItem="oQw-M9-06M" secondAttribute="top" id="lh6-Xq-hlR"/>
+                <constraint firstItem="VHK-9c-Oz0" firstAttribute="width" secondItem="oQw-M9-06M" secondAttribute="width" multiplier="0.5" id="mCb-9E-pp4"/>
+                <constraint firstItem="VHK-9c-Oz0" firstAttribute="leading" secondItem="oQw-M9-06M" secondAttribute="leading" id="u7s-Ck-CcQ"/>
+                <constraint firstItem="pgx-Cc-xEM" firstAttribute="width" secondItem="oQw-M9-06M" secondAttribute="width" id="wQ2-Zb-4bt"/>
+            </constraints>
+        </view>
     </objects>
 </document>
