--- a/Catalog/SimpleController.xib
+++ b/Catalog/SimpleController.xib
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SimpleController">
             <connections>
-                <outlet property="view" destination="W0v-7W-9dW" id="Hvz-z7-RRe"/>
+                <outlet property="view" destination="PT0-LW-GsW" id="9ZK-qc-SVC"/>
                 <outlet property="webView" destination="6" id="22"/>
             </connections>
         </placeholder>
-        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="W0v-7W-9dW">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-            <nil key="simulatedStatusBarMetrics"/>
-            <webView key="tableHeaderView" contentMode="scaleToFill" id="6">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                <dataDetectorType key="dataDetectorTypes"/>
-                <connections>
-                    <outlet property="delegate" destination="-1" id="Rpg-u0-Pm7"/>
-                </connections>
-            </webView>
-            <connections>
-                <outlet property="dataSource" destination="-1" id="s4M-Hc-xdJ"/>
-            </connections>
-        </tableView>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view contentMode="scaleToFill" id="PT0-LW-GsW">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <dataDetectorType key="dataDetectorTypes"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="Rpg-u0-Pm7"/>
+                    </connections>
+                </webView>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="6" firstAttribute="top" secondItem="PT0-LW-GsW" secondAttribute="top" id="6SK-5G-93j"/>
+                <constraint firstItem="6" firstAttribute="height" secondItem="PT0-LW-GsW" secondAttribute="height" id="Gqf-cl-2Pp"/>
+                <constraint firstItem="6" firstAttribute="leading" secondItem="PT0-LW-GsW" secondAttribute="leading" id="jM2-yd-UTi"/>
+                <constraint firstItem="6" firstAttribute="width" secondItem="PT0-LW-GsW" secondAttribute="width" id="lEu-Mm-QX6"/>
+            </constraints>
+        </view>
     </objects>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
