--- a/Catalog/CallbacksController.xib
+++ b/Catalog/CallbacksController.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CallbacksController">
             <connections>
                 <outlet property="view" destination="1" id="Il9-9I-AqV"/>
-                <outlet property="webView" destination="4" id="12"/>
+                <outlet property="webViewPlaceholder" destination="Hjj-G0-w6u" id="wyI-dk-4Wr"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,14 +17,10 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hjj-G0-w6u">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <dataDetectorType key="dataDetectorTypes"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="11"/>
-                    </connections>
-                </webView>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="21">
                     <rect key="frame" x="0.0" y="556" width="300" height="44"/>
                     <constraints>
@@ -52,16 +48,16 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="4" firstAttribute="top" secondItem="1" secondAttribute="top" id="7b0-RT-84L"/>
+                <constraint firstItem="Hjj-G0-w6u" firstAttribute="width" secondItem="1" secondAttribute="width" id="35C-Bl-nI6"/>
                 <constraint firstItem="21" firstAttribute="width" secondItem="1" secondAttribute="width" multiplier="0.5" id="Ats-xE-ECV"/>
-                <constraint firstItem="4" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Hiy-uX-5hJ"/>
-                <constraint firstItem="4" firstAttribute="width" secondItem="1" secondAttribute="width" id="IcV-Fy-bbZ"/>
                 <constraint firstItem="22" firstAttribute="width" secondItem="1" secondAttribute="width" multiplier="0.5" id="KFu-8f-752"/>
+                <constraint firstItem="Hjj-G0-w6u" firstAttribute="top" secondItem="1" secondAttribute="top" id="LDd-YJ-3hy"/>
                 <constraint firstAttribute="trailing" secondItem="22" secondAttribute="trailing" id="LZY-Vu-gbp"/>
+                <constraint firstItem="22" firstAttribute="top" secondItem="Hjj-G0-w6u" secondAttribute="bottom" id="Lzt-e2-2e2"/>
                 <constraint firstAttribute="bottom" secondItem="21" secondAttribute="bottom" id="U7T-Yb-4zC"/>
                 <constraint firstAttribute="bottom" secondItem="22" secondAttribute="bottom" id="bkY-8S-yrU"/>
-                <constraint firstItem="22" firstAttribute="top" secondItem="4" secondAttribute="bottom" id="gaf-WL-OUo"/>
                 <constraint firstItem="21" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="w5G-Bl-DJT"/>
+                <constraint firstItem="Hjj-G0-w6u" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="zZH-FD-Qjo"/>
             </constraints>
         </view>
     </objects>
